DGC-321: Contrast issues resolved, also default select styling in Firefox removed.

--- a/docroot/themes/custom/twentyeighteen/sass/_config.scss
+++ b/docroot/themes/custom/twentyeighteen/sass/_config.scss
@@ -18,17 +18,19 @@ $light-gold: rgba($gold, 0.4);
 $light-yellow: rgba($gold, 0.2);
 $pale-yellow: rgb(255, 248, 204);
 $pale-blue: rgb(154, 184, 188);
+$light-teal: rgb(114, 156, 162);
 
 // theme colors
 $teal: rgb(54, 114, 122);
 $dark-teal: rgb(43, 91, 98);
+$darker-teal: rgb(38, 74, 79);
 $sienna: rgb(142, 47, 15);
 $orange: rgb(255, 157, 1);
 $dark-gray: rgb(80, 80, 80);
 
 // Utility color variables ///////////////
 $heading: $teal;
-$link: $teal;
+$link: $dark-teal;
 $textarea: rgba(255, 253, 242, 1);
 $textarea-focus: rgba(128, 188, 250, 1);
 $legend: rgba(54, 114, 122, 0.75);
